Update: manufacturer user

--- a/master/jade/views/account.jade
+++ b/master/jade/views/account.jade
@@ -44,7 +44,7 @@ h3 编辑管理账户
                   small.text-muted 必填
           .panel-footer.text-center
             button.mb-sm.btn.btn-lg.btn-info(type='submit') 提交   
-            button.mb-sm.btn.btn-lg.btn-default(ui-sref="app.accounts()") 取消
+            //- button.mb-sm.btn.btn-lg.btn-default(ui-sref="app.accounts()") 取消
         // END panel
   // END row
                 
