close #4 : remove brand

--- a/app/views/brand.html
+++ b/app/views/brand.html
@@ -59,6 +59,9 @@
                   </div>
                </div>
                <div class="panel-footer text-center">
+                  <button type="button" ng-click="remove()" class="mb-sm btn btn-lg btn-danger pull-left">
+                     <span class="btn-lable"> <i class="icon-trash"></i>
+                     </span>删除</button>
                   <button type="submit" class="mb-sm btn btn-lg btn-info">
                      <span class="btn-lable"> <i class="fa fa-save"></i>
                      </span>保存</button>
