--- a/master/jade/views/brand.jade
+++ b/master/jade/views/brand.jade
@@ -46,6 +46,10 @@ h3 车辆品牌详情
                   | 新增
             
           .panel-footer.text-center
+            button.mb-sm.btn.btn-lg.btn-danger.pull-left(type='button' ng-click="remove()") 
+              span.btn-lable 
+                i.icon-trash
+              | 删除
             button.mb-sm.btn.btn-lg.btn-info(type='submit') 
               span.btn-lable 
                 i.fa.fa-save
