--- a/master/jade/pages/login.jade
+++ b/master/jade/pages/login.jade
@@ -1,6 +1,6 @@
 .block-center.mt-xl.wd-xl(ng-controller="LoginFormController")
   // START panel
-  .panel.panel-dark.panel-flat
+  .panel.panel-green.panel-flat
     .panel-heading.text-center
       a(href="#")
         img.block-center.img-rounded(src='app/img/logo.png', alt='Image')
